--- a/boot-line/static/css/manage/filemanage.css
+++ b/boot-line/static/css/manage/filemanage.css
@@ -2,13 +2,13 @@ body {
 	padding: 10px 10px 0px 10px;
 }
 
-.div-project {
+.div-uploadfiles {
 	display: none;
 	width: 100%;
 	margin: 10px 0;
 }
 
-.div-project .layui-inline {
+.div-uploadfiles .layui-inline {
 	width: calc(50% - 5px);
 	margin-right: 0px;
 }
