--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,42 +1,42 @@
-/* Ñ¡Ïî¿¨ÑùÊ½ */
+/* é€‰é¡¹å¡ */
 .layui-tab {
-	margin: 0;
-	height: 100%;
+    margin: 0;
+    height: 100%;
 }
 
 .layui-tab-title {
-	/*width: calc(100% - 100px)*/
-	right: 70px;
+    /*width: calc(100% - 100px)*/
+    right: 70px;
 }
 
 .layui-tab-content {
-	position: absolute;
-	padding: 0px;
-	top: 40px;
-	right: 0;
-	bottom: 0;
-	left: 0;
+    position: absolute;
+    padding: 0px;
+    top: 40px;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .layui-tab-item {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
-/* ÄÚÇ¶¿ò¼ÜÑùÊ½*/
+/* ï¿½ï¿½Ç¶ï¿½ï¿½ï¿½ï¿½ï¿½Ê½*/
 .custom-iframe {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .layui-tab-title li:first-child > i {
-	display: none;
+    display: none;
 }
 
 .custom-nav {
-	position: absolute;
-	padding: 0px;
-	top: 0;
+    position: absolute;
+    padding: 0px;
+    top: 0;
     right: 0;
     height: 42px;
     background-color: #fff !important;
@@ -46,31 +46,31 @@
 }
 
 .custom-nav .layui-nav-item {
-	line-height: 41px;
-	background-color: #f2f2f2;
+    line-height: 41px;
+    background-color: #f2f2f2;
 }
 
 .custom-nav .layui-nav-item a {
-	color: #000;
+    color: #000;
 }
 
 .custom-nav .layui-nav-item a:hover {
-	color: #000;
+    color: #000;
 }
 
 .custom-nav .layui-nav-item .layui-nav-more {
-	top: 18px;
-	border-top-color: rgba(0, 0, 0, 0.7);
-	border-bottom-color: rgba(0, 0, 0, 0);
+    top: 18px;
+    border-top-color: rgba(0, 0, 0, 0.7);
+    border-bottom-color: rgba(0, 0, 0, 0);
 }
 
 .custom-nav .layui-nav-item .layui-nav-mored {
-	top: 12px;
-	border-top-color: rgba(0, 0, 0, 0);
-	border-bottom-color: rgba(0, 0, 0, 1);
+    top: 12px;
+    border-top-color: rgba(0, 0, 0, 0);
+    border-bottom-color: rgba(0, 0, 0, 1);
 }
 
 #div-updatePwd {
-	padding: 15px;
-	display: none;
+    padding: 15px;
+    display: none;
 }
