--- a/src/main/resources/vm/manage/filemanage.vm
+++ b/src/main/resources/vm/manage/filemanage.vm
@@ -33,7 +33,9 @@
     <button id="uploadFile" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>上传文件</button>
     <button id="refresh" class="layui-btn layui-btn-sm">刷新</button>
     <button id="clear" class="layui-btn layui-btn-sm">清空文件</button>
-    <button id="export" class="layui-btn layui-btn-sm">导出日志</button>
+    #if($logSize)
+        <button id="export" class="layui-btn layui-btn-sm">导出日志($logSize)</button>
+    #end
 </div>
 <table class="layui-table" id="tab_file" lay-filter="tab_file" style="margin: 0;"></table>
 </body>
