--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -30,6 +30,10 @@
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn" lay-event="build">构建</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="delete">删除</a>
 </script>
+<script type="text/html" id="status_templ">
+    <input type="checkbox" disabled name="status" {{# if(d.status){ }} checked {{# } }} lay-skin="switch"
+           lay-text="运行中|未运行">
+</script>
 <script type="text/javascript">
     var table;
     layui.use(['layer', 'element', 'table', 'form'], function () {
@@ -46,7 +50,7 @@
             even: true,
             cols: [[
                 {field: 'id', title: '项目名称'},
-                {field: 'modifyTime', title: '运行状态', width: '10%'},
+                {title: '运行状态', width: '10%', templet: "#status_templ"},
                 {field: 'createTime', title: '创建时间', width: '15%'},
                 {field: 'modifyTime', title: '修改时间', width: '15%'},
                 {field: 'op', title: '操作', toolbar: '#bar_projects'}
