--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -24,10 +24,11 @@
 </body>
 
 <script type="text/html" id="bar_projects">
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">管理</a>
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="update">配置</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn" lay-event="file">文件</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn" lay-event="build">构建</a>
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn" lay-event="ram">内存</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="delete">删除</a>
 </script>
 <script type="text/html" id="status_templ">
