--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -34,6 +34,9 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;" data-options="{'id':'manage', 'title':'项目管理', 'url':'/manage/projectInfo'}">项目管理</a>
                 </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;" data-options="{'id':'user', 'title':'用户管理', 'url':'/user/list'}">用户管理</a>
+                </li>
             </ul>
         </div>
     </div>
