--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -7,3 +7,29 @@
 <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
 <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
 <script type="text/javascript" src="/static/layui/layui.js"></script>
+<script type="text/javascript">
+    var $;
+    layui.use(['layer', 'element', 'form'], function () {
+        $ = layui.$;
+        element = layui.element;
+    });
+
+    function tabChange(options) {
+        var element = top.layui.element;
+        var lay_id = 'tab_' + options.id;
+        // 如果存在选项卡，切换，否则创建
+        if ($('[lay-id="tab_' + options.id + '"]').length > 0) {
+            element.tabChange('mainTabs', lay_id);
+        } else {
+            // 创建
+            var tab_content = '<iframe src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
+            element.tabAdd('mainTabs', {
+                title: options.title,
+                content: tab_content,
+                id: lay_id
+            });
+            // 创建完后切换
+            element.tabChange('mainTabs', lay_id);
+        }
+    }
+</script>
