--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -62,9 +62,6 @@
             </div>
         </div>
     </div>
-    <div class="layui-footer">
-        <div style="text-align: center;">© 2017 项目管理系统</div>
-    </div>
 </div>
 <div id="div-updatePwd">
     <form method="POST" class="layui-form" id="form_updatePwd">
@@ -106,25 +103,7 @@
             } catch (e) {
                 options = eval('(' + dataJSON + ')');
             }
-            var lay_id = 'tab_' + options.id;
-
-            // 如果存在选项卡，切换，否则创建
-            if ($('[lay-id="tab_' + options.id + '"]').length > 0) {
-
-                element.tabChange('mainTabs', lay_id);
-            } else {
-
-                // 创建
-                var tab_content = '<iframe src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
-                element.tabAdd('mainTabs', {
-                    title: options.title,
-                    content: tab_content,
-                    id: lay_id
-                });
-
-                // 创建完后切换
-                element.tabChange('mainTabs', lay_id);
-            }
+            tabChange(options);
         });
 
         // 操作
