--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -109,7 +109,6 @@
                 success: function (data) {
                     if (200 == data.code) {
                         layer.closeAll('page');
-
                         // 刷新项目列表
                         table.reload('table_project', {height: 'full-52'});
                     } else {
@@ -189,48 +188,21 @@
             var lay_id = 'tab_file_' + data.id;
             var url = '/file/filemanage?id=' + data.id;
 
-            // 如果存在选项卡，切换，否则创建
-            if (top.layui.$('[lay-id="tab_file_' + data.id + '"]').length > 0) {
-
-                top.layui.element.tabChange('mainTabs', lay_id);
-            } else {
-
-                // 创建
-                var tab_content = '<iframe src="' + url + '" frameborder="0" class="custom-iframe"></iframe>';
-                top.layui.element.tabAdd('mainTabs', {
-                    title: data.id + ' - 文件',
-                    content: tab_content,
-                    id: lay_id
-                });
-
-                // 创建完后切换
-                top.layui.element.tabChange('mainTabs', lay_id);
-            }
+            tabChange({
+                id: data.id,
+                url: url,
+                title: data.id + ' - 文件',
+            });
         }
 
         // 管理
         function manageApplication(data) {
-
-            var lay_id = 'tab_' + data.id;
             var url = '/manage/console?id=' + data.id;
-
-            // 如果存在选项卡，切换，否则创建
-            if (top.layui.$('[lay-id="tab_' + data.id + '"]').length > 0) {
-
-                top.layui.element.tabChange('mainTabs', lay_id);
-            } else {
-
-                // 创建
-                var tab_content = '<iframe src="' + url + '" frameborder="0" class="custom-iframe"></iframe>';
-                top.layui.element.tabAdd('mainTabs', {
-                    title: data.id + ' - 管理',
-                    content: tab_content,
-                    id: lay_id
-                });
-
-                // 创建完后切换
-                top.layui.element.tabChange('mainTabs', lay_id);
-            }
+            tabChange({
+                id: data.id,
+                url: url,
+                title: data.id + ' - 管理',
+            });
         }
 
         // 删除项目
